# aPrioriDNS

./: .gitignore  LICENSE  README.md  Updates.py  pyproject.toml  test.py  test_plots.py  test_unreleased_version.py
data/: README.md
data/DNS_DATA_cut_asymmetric/: Z_st.txt
data/DNS_DATA_cut_asymmetric/chem_thermo_tran/: li_h2.yaml
data/Filter12FavreGauss/: info.json
data/Lifted_H2_subdomain/chem_thermo_tran/: li_h2.cti
src/aPrioriDNS/: DNS.py  NN.py  __init__.py  _data_struct.py  _styles.py  _utils.py  _variables.py  plot_utilities.py
tutorials/: 01-cut_a_scalar.py  02-filter_scalar.py  04-data_visualization.py  05-cut_DNS_field.py  05-initialize_DNS_field.py  07-filter_DNS_field.py  ML_closure_reaction_rates.py  Quickstart.py
